Updated example to test each of the included features.

--- a/example/index.html
+++ b/example/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Axon AngularJS Utilities</title>
+    <link type="text/css" rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="../bower_components/bootstrap-css-only/css/bootstrap-theme.css" />
+    <link type="text/css" rel="stylesheet" href="../build/axon-angularjs-utilities.css" />
+    <link type="text/css" rel="stylesheet" href="index.css" />
   </head>
   <body ng-app="axon-utilities-test" ng-strict-di>
     <div id="container">
-      <section ui-view="body"></section>
+      <section ui-view></section>
     </div>
-    <script async type="text/javascript" src="test.js"></script>
+    <script type="text/javascript" src="../bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script type="text/javascript" src="../build/axon-angularjs-utilities.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
